cleaned up formatting with prettier

--- a/404.html
+++ b/404.html
@@ -1,44 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="assets/css/style.css" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/fav/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/fav/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/fav/favicon-16x16.png">
-    <link rel="manifest" href="assets/images/fav/site.webmanifest">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="assets/css/style.css" rel="stylesheet" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/images/fav/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/images/fav/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/images/fav/favicon-16x16.png"
+    />
+    <link rel="manifest" href="assets/images/fav/site.webmanifest" />
     <!--meta tags for search engines-->
-    <meta name="description" content="A top trumps linke game featuring pokemon">
+    <meta
+      name="description"
+      content="A top trumps linke game featuring pokemon"
+    />
     <title>Pokebattler</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="wrapper">
-        <div class="container">
-            <header class="header" id="logo-header">
-                <a href="index.html"><img src="assets/images/pokebattler-logo-large.webp" alt="Pokebattler" class="logo"></a>
-            </header>
-            <main class="main-content">
-                <div class="instructions">
-                    <h1>404 - Your pokemon is lost!</h1>
-                    <!-- sadpikachu from https://www.deviantart.com/jujumays/art/A-Very-Sad-Pikachu-929558432 -->
-                    <img src="assets/images/sad_pikachu.jpg" alt="A sad, lost Pikachu" class="lost-img">
-                    <p>A lost pokemon can't have fun!</p>
-                    <p>Perhaps you should head <a href="index.html">home?</a></p>
-                </div>
-            </main>
-        </div>
-        <footer class="footer">
-            <!-- footer content  -->  
-            <ul class="footer-links"> 
-              <li><a href="https://github.com/monkphin" target="_blank" rel="noopener" aria-label="Github (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-github"></i></a></li>
-              <li><a href="https://www.facebook.com/owbur?" target="_blank" rel="noopener" aria-label="Facebook (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-facebook"></i></a></li>
-              <li><a href="https://x.com/monkphin" target="_blank" rel="noopener" aria-label="Twitter (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-twitter"></i></a></li>
-              <li><a href="https://www.linkedin.com/in/darren-b-aa1717a/" target="_blank" rel="noopener" aria-label="LinkedIn (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-linkedin"></i></a></li>
-            </ul>
-          </footer>
+      <div class="container">
+        <header class="header" id="logo-header">
+          <a href="index.html"
+            ><img
+              src="assets/images/pokebattler-logo-large.webp"
+              alt="Pokebattler"
+              class="logo"
+          /></a>
+        </header>
+        <main class="main-content">
+          <div class="instructions">
+            <h1>404 - Your pokemon is lost!</h1>
+            <!-- sadpikachu from https://www.deviantart.com/jujumays/art/A-Very-Sad-Pikachu-929558432 -->
+            <img
+              src="assets/images/sad_pikachu.jpg"
+              alt="A sad, lost Pikachu"
+              class="lost-img"
+            />
+            <p>A lost pokemon can't have fun!</p>
+            <p>Perhaps you should head <a href="index.html">home?</a></p>
+          </div>
+        </main>
+      </div>
+      <footer class="footer">
+        <!-- footer content  -->
+        <ul class="footer-links">
+          <li>
+            <a
+              href="https://github.com/monkphin"
+              target="_blank"
+              rel="noopener"
+              aria-label="Github (Opens in a new Tab)"
+              class="fa-logo"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+          </li>
+          <li>
+            <a
+              href="https://www.facebook.com/owbur?"
+              target="_blank"
+              rel="noopener"
+              aria-label="Facebook (Opens in a new Tab)"
+              class="fa-logo"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
+          </li>
+          <li>
+            <a
+              href="https://x.com/monkphin"
+              target="_blank"
+              rel="noopener"
+              aria-label="Twitter (Opens in a new Tab)"
+              class="fa-logo"
+              ><i class="fa-brands fa-twitter"></i
+            ></a>
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/darren-b-aa1717a/"
+              target="_blank"
+              rel="noopener"
+              aria-label="LinkedIn (Opens in a new Tab)"
+              class="fa-logo"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
+          </li>
+        </ul>
+      </footer>
     </div>
-    <script src="https://kit.fontawesome.com/f862737888.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/f862737888.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="assets/js/javascript.js"></script>
-</body>
+  </body>
 </html>
