--- a/index.html
+++ b/index.html
@@ -1,66 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="assets/css/style.css" rel="stylesheet">
-        <!--favicons-->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/fav/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/fav/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/fav/favicon-16x16.png">
-    <link rel="manifest" href="assets/images/fav/site.webmanifest">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="assets/css/style.css" rel="stylesheet" />
+    <!--favicons-->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/images/fav/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/images/fav/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/images/fav/favicon-16x16.png"
+    />
+    <link rel="manifest" href="assets/images/fav/site.webmanifest" />
     <!--meta tags for search engines-->
-    <meta name="description" content="A top trumps linke game featuring pokemon">
+    <meta
+      name="description"
+      content="A top trumps linke game featuring pokemon"
+    />
     <title>Pokebattler</title>
-</head>
-<body>
-  <div class="wrapper">
-    <div class="container">
-      <header class="header" id="logo-header">  
-        <a href="index.html"><img src="assets/images/pokebattler-logo-large.webp" alt="Pokebattler Logo" class="logo"></a>
-      </header>
-      <main class="main-content">
-        <!-- Welcome Message with game instructions -->
-        <div class="hero-image">
-          <img src="assets/images/trainers.avif" alt="Pokemon Trainers" class="trainers-image">
-        </div>
-        <div class="instructions">
-          <h1 class="instructions-title">Game Instructions</h1>
-          <p>
-            Each card has 4 statistics to choose from, you need to pick one of these in the hopes of it being better than the corresponding statistic on your opponents card. 
-            Once you have made your choice it will be compared to the same statistic on your opponents card and the higher score will win. 
-            If you win, your opponent loses a card and you go again. If your opponent wins you lose a card and its their turn. If its a draw the current player goes again.
-          </p>
-          <p>
-            The card starts are randomly generated. So no two games will ever be the same.
-            The highest number may not always be the best option, so choose wisely!
-          </p>
-          <p>
-            The game will continue until one player loses all their cards.
-          </p>
-          <p class="name-request">To begin, please enter your name below.</p>
-          <!-- player name form -->
-          <div>
-            <form id="name-form" class="name-form" aria-labelledby="player-name">
-              <label for="player-name">Player Name: </label>
-              <input type="text" id="player-name" name="player-name">
-              <button type="submit" id="submit">Play Game</button>
-            </form>
-          </div>   
-        </div>
-      </main>
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="container">
+        <header class="header" id="logo-header">
+          <a href="index.html"
+            ><img
+              src="assets/images/pokebattler-logo-large.webp"
+              alt="Pokebattler Logo"
+              class="logo"
+          /></a>
+        </header>
+        <main class="main-content">
+          <!-- Welcome Message with game instructions -->
+          <div class="hero-image">
+            <img
+              src="assets/images/trainers.avif"
+              alt="Pokemon Trainers"
+              class="trainers-image"
+            />
+          </div>
+          <div class="instructions">
+            <h1 class="instructions-title">Game Instructions</h1>
+            <p>
+              Each card has 4 statistics to choose from, you need to pick one of
+              these in the hopes of it being better than the corresponding
+              statistic on your opponents card. Once you have made your choice
+              it will be compared to the same statistic on your opponents card
+              and the higher score will win. If you win, your opponent loses a
+              card and you go again. If your opponent wins you lose a card and
+              its their turn. If its a draw the current player goes again.
+            </p>
+            <p>
+              The card starts are randomly generated. So no two games will ever
+              be the same. The highest number may not always be the best option,
+              so choose wisely!
+            </p>
+            <p>
+              The game will continue until one player loses all their cards.
+            </p>
+            <p class="name-request">To begin, please enter your name below.</p>
+            <!-- player name form -->
+            <div>
+              <form
+                id="name-form"
+                class="name-form"
+                aria-labelledby="player-name"
+              >
+                <label for="player-name">Player Name: </label>
+                <input type="text" id="player-name" name="player-name" />
+                <button type="submit" id="submit">Play Game</button>
+              </form>
+            </div>
+          </div>
+        </main>
+      </div>
+      <footer class="footer">
+        <!-- footer content  -->
+        <ul class="footer-links">
+          <li>
+            <a
+              href="https://github.com/monkphin"
+              target="_blank"
+              rel="noopener"
+              aria-label="Github (Opens in a new Tab)"
+              class="fa-logo"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+          </li>
+          <li>
+            <a
+              href="https://www.facebook.com/owbur?"
+              target="_blank"
+              rel="noopener"
+              aria-label="Facebook (Opens in a new Tab)"
+              class="fa-logo"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
+          </li>
+          <li>
+            <a
+              href="https://x.com/monkphin"
+              target="_blank"
+              rel="noopener"
+              aria-label="Twitter (Opens in a new Tab)"
+              class="fa-logo"
+              ><i class="fa-brands fa-twitter"></i
+            ></a>
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/darren-b-aa1717a/"
+              target="_blank"
+              rel="noopener"
+              aria-label="LinkedIn (Opens in a new Tab)"
+              class="fa-logo"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
+          </li>
+        </ul>
+      </footer>
     </div>
-    <footer class="footer">
-      <!-- footer content  -->  
-      <ul class="footer-links"> 
-        <li><a href="https://github.com/monkphin" target="_blank" rel="noopener" aria-label="Github (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-github"></i></a></li>
-        <li><a href="https://www.facebook.com/owbur?" target="_blank" rel="noopener" aria-label="Facebook (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-facebook"></i></a></li>
-        <li><a href="https://x.com/monkphin" target="_blank" rel="noopener" aria-label="Twitter (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-twitter"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/darren-b-aa1717a/" target="_blank" rel="noopener" aria-label="LinkedIn (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-linkedin"></i></a></li>
-      </ul>
-    </footer>
-  </div>
-  <script src="https://kit.fontawesome.com/f862737888.js" crossorigin="anonymous"></script>
-  <script src="assets/js/javascript.js"></script>
-</body>
+    <script
+      src="https://kit.fontawesome.com/f862737888.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="assets/js/javascript.js"></script>
+  </body>
 </html>
