--- a/game.html
+++ b/game.html
@@ -1,108 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="assets/css/style.css" rel="stylesheet" />
-    <!--favicons-->
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="assets/images/fav/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="assets/images/fav/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="assets/images/fav/favicon-16x16.png"
-    />
-    <link rel="manifest" href="assets/images/fav/site.webmanifest" />
-    <!--meta tags for search engines-->
-    <meta
-      name="description"
-      content="A top trumps linke game featuring pokemon"
-    />
-    <title>Pokebattler</title>
-  </head>
-  <body>
-    <div class="d-flex flex-column min-vh-100">
-      <header class="header" id="logo-header">
-        <a href="index.html"><img src="assets/images/pokebattler-logo-large.webp" alt="PokeBattler" class="logo"></a>
-    </header>
-      <main class="main-content d-flex flex-column align-items-center justify-content-center flex-grow-1">
-        <!-- main game section -->
-        <div class="container position-relative">
-          <div class="row justify-content-center" id="card-area">
-            <div class="col-md-6 d-flex justify-content-center" id="player-card">
-              <!-- Player Card -->
-            </div>
-            <div class="col-md-6 d-flex justify-content-center" id="opponent-card">
-              <!-- Opponent card -->
-            </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="assets/css/style.css" rel="stylesheet">    
+  <title>Pokebattler</title>
+</head>
+<body>
+  <div class="d-flex flex-column min-vh-100">
+    <header class="header" id="logo-header">
+      <a href="index.html"><img src="assets/images/pokebattler-logo-large.webp" alt="PokeBattler" class="logo"></a>
+  </header>
+    <main class="main-content d-flex flex-column align-items-center justify-content-center flex-grow-1">
+      <!-- main game section -->
+      <div class="container position-relative">
+        <div class="row justify-content-center" id="card-area">
+          <div class="col-md-6 d-flex justify-content-center" id="player-card">
+            <!-- Player Card -->
           </div>
-          <div class="row" id="deck-size-area">
-            <!-- remaining deck counts -->
-          </div>
-          <div class="col-12" id="message-area">
-            <!-- Notification messages go here. -->
+          <div class="col-md-6 d-flex justify-content-center" id="opponent-card">
+            <!-- Opponent card -->
           </div>
         </div>
-      </main>
-      <footer class="footer">
-        <!-- footer content  -->
-        <ul class="footer-links">
-          <li>
-            <a
-              href="https://github.com/monkphin"
-              target="_blank"
-              rel="noopener"
-              aria-label="Github (Opens in a new Tab)"
-              class="fa-logo"
-              ><i class="fa-brands fa-github"></i
-            ></a>
-          </li>
-          <li>
-            <a
-              href="https://www.facebook.com/owbur?"
-              target="_blank"
-              rel="noopener"
-              aria-label="Facebook (Opens in a new Tab)"
-              class="fa-logo"
-              ><i class="fa-brands fa-facebook"></i
-            ></a>
-          </li>
-          <li>
-            <a
-              href="https://x.com/monkphin"
-              target="_blank"
-              rel="noopener"
-              aria-label="Twitter (Opens in a new Tab)"
-              class="fa-logo"
-              ><i class="fa-brands fa-twitter"></i
-            ></a>
-          </li>
-          <li>
-            <a
-              href="https://www.linkedin.com/in/darren-b-aa1717a/"
-              target="_blank"
-              rel="noopener"
-              aria-label="LinkedIn (Opens in a new Tab)"
-              class="fa-logo"
-              ><i class="fa-brands fa-linkedin"></i
-            ></a>
-          </li>
-        </ul>
-      </footer>
-    </div>
-    <script
-      src="https://kit.fontawesome.com/f862737888.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="assets/js/javascript.js"></script>
-  </body>
+        <div class="row" id="deck-size-area">
+          <!-- remaining deck counts -->
+        </div>
+        <div class="col-12" id="message-area">
+          <!-- Notification messages go here. -->
+        </div>
+      </div>
+    </main>
+     <footer class="footer">
+      <!-- footer content  -->  
+      <ul class="footer-links"> 
+        <li><a href="https://github.com/monkphin" target="_blank" rel="noopener" aria-label="Github (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-github"></i></a></li>
+        <li><a href="https://www.facebook.com/owbur?" target="_blank" rel="noopener" aria-label="Facebook (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-facebook"></i></a></li>
+        <li><a href="https://x.com/monkphin" target="_blank" rel="noopener" aria-label="Twitter (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-twitter"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/darren-b-aa1717a/" target="_blank" rel="noopener" aria-label="LinkedIn (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-linkedin"></i></a></li>
+      </ul>
+    </footer>
+  </div>
+</div>
+  <script src="https://kit.fontawesome.com/f862737888.js" crossorigin="anonymous"></script>
+  <script src="assets/js/javascript.js"></script>
+</body>
+</html>
