corrected typo on metacontent and added favicons to game page

--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
     <!--meta tags for search engines-->
     <meta
       name="description"
-      content="A top trumps linke game featuring pokemon"
+      content="A top trumps like game featuring pokemon"
     />
     <title>Pokebattler</title>
   </head>
