--- a/game.html
+++ b/game.html
@@ -5,12 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link href="assets/css/style.css" rel="stylesheet">    
+  <!--favicons-->
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/images/fav/apple-touch-icon.png"/>
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/fav/favicon-32x32.png"/>
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/fav/favicon-16x16.png"/>
+  <link rel="manifest" href="assets/images/fav/site.webmanifest" />
+  <!--meta tags for search engines-->
+  <meta name="description" content="A top trumps like game featuring pokemon"/>
   <title>Pokebattler</title>
 </head>
 <body>
   <div class="d-flex flex-column min-vh-100">
     <header class="header" id="logo-header">
-      <a href="index.html"><img src="assets/images/pokebattler-logo-large.webp" alt="PokeBattler" class="logo"></a>
+      <a href="index.html"><img src="assets/images/pokebattler-logo-large.webp" alt="Pokebattler" class="logo"></a>
   </header>
     <main class="main-content d-flex flex-column align-items-center justify-content-center flex-grow-1">
       <!-- main game section -->
