added a tweak to ensure background properly renders on html

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <title>Pokebattler</title>
   </head>
   <body>
+    <div class="background">
+      <!-- have to call background in this manner due to rendering issues otherwise -->
+    </div>
     <div class="wrapper">
       <div class="container">
         <header class="header" id="logo-header">
