--- a/game.html
+++ b/game.html
@@ -14,6 +14,9 @@
   <title>Pokebattler</title>
 </head>
 <body>
+  <div class="background">
+    <!-- have to call background in this manner due to rendering issues otherwise -->
+  </div>
   <div class="d-flex flex-column min-vh-100">
     <header class="header" id="logo-header">
       <a href="index.html"><img src="assets/images/pokebattler-logo-large.webp" alt="Pokebattler" class="logo"></a>
