added html/js/css adjustments to add sweetalert2 for alert messaging. Also amended the Readme to take this addition into account

--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
         </ul>
       </footer>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script
       src="https://kit.fontawesome.com/f862737888.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="assets/js/javascript.js"></script>
+      crossorigin="anonymous"></script>
+    <script type="module" src="assets/js/javascript.js"></script>
   </body>
 </html>
